--- a/cifra.html
+++ b/cifra.html
@@ -1,14 +1,28 @@
 <head>
+<meta charset="utf-8" />
+<script type="text/javascript" src="http://code.jquery.com/jquery-latest.pack.js"></script>
 <style>
 pre {
-    width: 100%;
-    height: 100%;
+    width: 93%;
     font-family: 'BitstreamVeraSansMonoRoman',monospace;
     font-size: 12px;
+    background-color: #EEE;
+}
+
+pre#p1 {
+    float: left;
+    width: 45%;
+    border-right: 50px solid #FFF;
+}
+
+span, div {
+    font-weight: bold;
+    color: #FF6600;
+    background-color: #FFF;
 }
 </style>
 </head>
-<pre>
+<pre id="p1">
 
 ALELUIA de Handel
 
@@ -197,3 +211,198 @@ MEU AMIGO       MEU SALVADOR
 ENQUANTO EU VIVER TE ADORAREI SENHOR
 
 </pre>
+
+<pre id="p2">
+
+ALELUIA de Handel
+
+Tom: G
+		
+
+(D)	              Bm7    A       D
+O reino deste mundo,   já    pas – sou
+D      Em    D/F#    G      A       Bm7
+A     ser     de    nos – so Senhor
+A/C#     D     E/G#      A 
+   E       de     seu    Cristo
+D/F#     G     F#      Em7        D
+  E        de               seu     Cristo.
+
+   A      D       F#m  Bm7   D       G   F#     Em      Em7      D
+E E   –   le         rei  –  na  –  rá   pa  –  ra      sem – pre
+   A/C#   Bm7       E/G#         D/C#      E        A
+E  Ele       reina  –  rá para   sem       –     pre
+
+  A                        D/A       A     D/A      A       D/A   A     D/A     A
+Rei dos Reis (Pra sem – pre e sem – pre, alelu  –  ia, alelu  –  ia)
+      A                           D/A       A     D/A      A
+E grande Senhor (Pra sem – pre e sem – pre)
+  D	          G        D      G         D       G      D       G      D
+Rei dos Reis (Pra sem – pre e sem – pre, alelu  –  ia, alelu  –  ia)
+      E                              A         E      A         E       A      E       A      E
+E grande Senhor (Pra sem – pre e sem – pre, alelu  –  ia, alelu  –  ia)
+ F#                        Bm       F#    Bm       F#
+Rei dos Reis (Pra sem – pre e sem – pre)
+      G	                 C        G      C        G
+E grande Senhor (Pra sem – pre e sem – pre)
+
+G    G/B      C7(9)   G    G/B      C7(9)
+A     –     le – luia,   A     –     le – luia
+G    G/B      C7(9)   G    G/B      C7(9)
+A     –     le – luia,   A     –     le – luia
+
+[tag]
+G    G/B       C7(9)    G   G/B   C7(9)
+A     –     le – luia
+G    G/B       C7(9)    G   G/B   C7(9)
+A     –     le – luia
+
+[final]
+G    G/B      C7(9)   G    G/B      C7(9)
+A     –     le – luia,   A     –     le – luia
+G    G/B      C7(9)   G    G/B        C7(9)  G  [stop]
+A     –     le – luia,   A     –     le  –  lu  –  ia
+G      C	        G
+A – LE… LU…    IAAAA!!
+
+
+
+
+
+JESUS FREAK
+
+acoustic : 
+ E-G-A-B (2x)
+  INTRO: Fm-Ab-Eb-Bb-Cm (4x)     
+
+VERSE 1:
+Fm  Db           Bb
+Separated, and I cut myself clean
+       Fm            Db         Bb
+From a past that comes back in my darkest of dreams.
+Fm        Db          Bb
+Been apprehended by a spiritual force,
+      Fm           Db             Bb
+And a grace that replaced all the me I divorced.
+
+RAP 1:
+        Fm                         Db
+I saw a man with a tat(too) on his big fat belly,
+   Bb
+It wiggled around like marmalade jelly.
+   Fm                 Db
+It took me a while to catch what it said,
+         Bb
+'cause I had to match the rhytm of his belly with my head.
+Fm               Db
+"Jesus Saves" is what it raved,
+     Bb
+In a typical tatoo green.
+   Fm                    Db
+He stood on a box in the middle of the city
+    Bb
+And claimed he had a dream.
+
+CHORUS:
+F                Ab              Eb             Bb    Cm
+What will people think when they hear that I, a Jesus Freak?
+F                Ab           Eb       Bb   Cm
+What will people do when they find out it's true?
+F              Ab           Eb         Bb    Cm
+I don't really care if they label me a Jesus Freak.
+F              Ab    Eb   Bb  Cm
+There ain't no disguising the truth.
+Fm              Bb             Fm        Bb
+(There ain,t no disguising the truth, no I ain,t in to hiding--the
+truth)
+
+VERSE 2:
+Fm  Db       Bb
+Kamikaze, my death is gain
+          Fm           Db         Bb
+I've been marked by my maker, a peculiar display
+Fm           Db          Bb
+The high and lofty, they see me as weak
+         Fm             Db           Bb
+'Cause I won't live and die, for the power they seek?
+
+RAP 2:
+            Fm                     Db
+There was a man in the desert with naps in his head,
+    Bb
+The sand that he walked was also his bed.
+    Fm                           Db
+The words that he spoke made the people assume,
+             Bb
+There wasn't too much left in the upper room.
+     Fm                    Db
+With scabs on his back and hair on his face,
+     Bb
+They thought he was strange by the locust he ate.
+           Fm                          Db
+Ya see the Pharisees tripped when they heard him speak,
+          Bb               
+Until the King took the head of this Jesus Freak.
+
+CHORUS
+
+BRIDGE: Fm - Ab/F - Bb/F (2x)
+
+Fm             Ab/F          Bb/F
+People say I'm strange, does it make me a stranger,
+        Fm       Ab/F   Bb/F      Fm
+That my best friend was born in a manger
+Fm             Ab/F          Bb/F
+People say I'm strange, does it make me a stranger,
+        Fm       Ab/F   Bb/F      Fm
+That my best friend was born in a manger
+
+
+Dm-Ab-Dm/Ab-Ab-Dm/Ab-Ab (2x)
+
+CHORUS (2x)
+
+Fm               Ab     Eb        Bb     Cm
+What will people think (What will people think)
+Fm               Ab  Eb        Bb     Cm
+What will people do (What will people do)
+Fm             Ab    Eb        Bb    Cm
+I don't really care (What else can I say)
+Fm                Ab          Eb     Bb       Cm  Fm
+There ain't no disguising the truth (Jesus is the way)
+
+
+
+
+
+JESUS, ÉS MEU AMADO
+
+
+     Tom: F
+		
+
+INTRODUÇÃO: F9 Em7 A7(9) Dm7 Bb9  C9 
+
+F9         Em7      A7(9)  Dm7  
+    JESUS  ÉS MEU AMADO 
+                 Bb9    C9 F9      
+JESUS NUNCA TE DEIXAREI
+           Em7      A7(9)  Dm7
+DO LAMAÇAL FUI RESGATADO 
+                   Bb9      C9         F9
+ME FIRMOU NA ROCHA     AGORA    EU SEI
+        C/E       C#º  Dm7
+TE AMO      TE QUERO 
+       Cm7         Bb9               F9
+HAJA O QUE HOUVER JAMAIS TE DEIXAREI
+          C/E                  Dm7
+MEU AMIGO       MEU SALVADOR                                
+               Cm7            Bb9     F9
+ENQUANTO EU VIVER TE ADORAREI SENHOR
+
+</pre>
+<script>
+er = /(^|\r|\n)(.*[:\)])?([ \t\-(]*[A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?(\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?){0,3}(sus\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?)?(\(?[/\\](([A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?)|([#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?))\)?)?([ \t\-]*[\[\(].*[\)\]])?[ \t\-]*)+[$\r\n]/g;
+document.getElementById('p1').innerHTML = document.getElementById('p1').innerHTML.replace(er, "<span>$&</span>");
+document.getElementById('p2').innerHTML = document.getElementById('p2').innerHTML.replace(er, "\r\n<div>$&</div>").replace(/\<div\>[\r\n]/g, '<div>');
+</script>
