ER multiline e CSS inline-block

--- a/cifra.html
+++ b/cifra.html
@@ -20,6 +20,11 @@ span, div {
     color: #FF6600;
     background-color: #FFF;
 }
+
+div {
+    display: inline-block;
+    width: 100%;
+}
 </style>
 </head>
 <pre id="p1">
@@ -27,13 +32,13 @@ span, div {
 ALELUIA de Handel
 
 Tom: G
-		
+
 
 (D)	              Bm7    A       D
 O reino deste mundo,   já    pas – sou
 D      Em    D/F#    G      A       Bm7
 A     ser     de    nos – so Senhor
-A/C#     D     E/G#      A 
+A/C#     D     E/G#      A
    E       de     seu    Cristo
 D/F#     G     F#      Em7        D
   E        de               seu     Cristo.
@@ -81,9 +86,9 @@ A – LE… LU…    IAAAA!!
 
 JESUS FREAK
 
-acoustic : 
+acoustic :
  E-G-A-B (2x)
-  INTRO: Fm-Ab-Eb-Bb-Cm (4x)     
+  INTRO: Fm-Ab-Eb-Bb-Cm (4x)
 
 VERSE 1:
 Fm  Db           Bb
@@ -151,7 +156,7 @@ With scabs on his back and hair on his face,
 They thought he was strange by the locust he ate.
            Fm                          Db
 Ya see the Pharisees tripped when they heard him speak,
-          Bb               
+          Bb
 Until the King took the head of this Jesus Freak.
 
 CHORUS
@@ -189,24 +194,24 @@ JESUS, ÉS MEU AMADO
 
 
      Tom: F
-		
 
-INTRODUÇÃO: F9 Em7 A7(9) Dm7 Bb9  C9 
 
-F9         Em7      A7(9)  Dm7  
-    JESUS  ÉS MEU AMADO 
-                 Bb9    C9 F9      
+INTRODUÇÃO: F9 Em7 A7(9) Dm7 Bb9  C9
+
+F9         Em7      A7(9)  Dm7
+    JESUS  ÉS MEU AMADO
+                 Bb9    C9 F9
 JESUS NUNCA TE DEIXAREI
            Em7      A7(9)  Dm7
-DO LAMAÇAL FUI RESGATADO 
+DO LAMAÇAL FUI RESGATADO
                    Bb9      C9         F9
 ME FIRMOU NA ROCHA     AGORA    EU SEI
         C/E       C#º  Dm7
-TE AMO      TE QUERO 
+TE AMO      TE QUERO
        Cm7         Bb9               F9
 HAJA O QUE HOUVER JAMAIS TE DEIXAREI
           C/E                  Dm7
-MEU AMIGO       MEU SALVADOR                                
+MEU AMIGO       MEU SALVADOR
                Cm7            Bb9     F9
 ENQUANTO EU VIVER TE ADORAREI SENHOR
 
@@ -217,13 +222,13 @@ ENQUANTO EU VIVER TE ADORAREI SENHOR
 ALELUIA de Handel
 
 Tom: G
-		
+
 
 (D)	              Bm7    A       D
 O reino deste mundo,   já    pas – sou
 D      Em    D/F#    G      A       Bm7
 A     ser     de    nos – so Senhor
-A/C#     D     E/G#      A 
+A/C#     D     E/G#      A
    E       de     seu    Cristo
 D/F#     G     F#      Em7        D
   E        de               seu     Cristo.
@@ -271,9 +276,9 @@ A – LE… LU…    IAAAA!!
 
 JESUS FREAK
 
-acoustic : 
+acoustic :
  E-G-A-B (2x)
-  INTRO: Fm-Ab-Eb-Bb-Cm (4x)     
+  INTRO: Fm-Ab-Eb-Bb-Cm (4x)
 
 VERSE 1:
 Fm  Db           Bb
@@ -341,7 +346,7 @@ With scabs on his back and hair on his face,
 They thought he was strange by the locust he ate.
            Fm                          Db
 Ya see the Pharisees tripped when they heard him speak,
-          Bb               
+          Bb
 Until the King took the head of this Jesus Freak.
 
 CHORUS
@@ -379,30 +384,30 @@ JESUS, ÉS MEU AMADO
 
 
      Tom: F
-		
 
-INTRODUÇÃO: F9 Em7 A7(9) Dm7 Bb9  C9 
 
-F9         Em7      A7(9)  Dm7  
-    JESUS  ÉS MEU AMADO 
-                 Bb9    C9 F9      
+INTRODUÇÃO: F9 Em7 A7(9) Dm7 Bb9  C9
+
+F9         Em7      A7(9)  Dm7
+    JESUS  ÉS MEU AMADO
+                 Bb9    C9 F9
 JESUS NUNCA TE DEIXAREI
            Em7      A7(9)  Dm7
-DO LAMAÇAL FUI RESGATADO 
+DO LAMAÇAL FUI RESGATADO
                    Bb9      C9         F9
 ME FIRMOU NA ROCHA     AGORA    EU SEI
         C/E       C#º  Dm7
-TE AMO      TE QUERO 
+TE AMO      TE QUERO
        Cm7         Bb9               F9
 HAJA O QUE HOUVER JAMAIS TE DEIXAREI
           C/E                  Dm7
-MEU AMIGO       MEU SALVADOR                                
+MEU AMIGO       MEU SALVADOR
                Cm7            Bb9     F9
 ENQUANTO EU VIVER TE ADORAREI SENHOR
 
 </pre>
 <script>
-er = /(^|\r|\n)(.*[:\)])?([ \t\-(]*[A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?(\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?){0,3}(sus\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?)?(\(?[/\\](([A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?)|([#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?))\)?)?([ \t\-]*[\[\(].*[\)\]])?[ \t\-]*)+[$\r\n]/g;
+er = /^(.*[:\)])?([ \t\-(]*[A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?(\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?){0,3}(sus\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?)?(\(?[/\\](([A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?)|([#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?))\)?)?([ \t\-]*[\[\(].*[\)\]])?[ \t\-]*)+$/gm;
 document.getElementById('p1').innerHTML = document.getElementById('p1').innerHTML.replace(er, "<span>$&</span>");
-document.getElementById('p2').innerHTML = document.getElementById('p2').innerHTML.replace(er, "\r\n<div>$&</div>").replace(/\<div\>[\r\n]/g, '<div>');
+document.getElementById('p2').innerHTML = document.getElementById('p2').innerHTML.replace(er, "<div>$&</div>");
 </script>
