--- a/acordes.html
+++ b/acordes.html
@@ -1,21 +1,16 @@
 <script>
-z = [
-    'A',
-    'A#',
-    'Ab',
-    'B',
-    'C',
-]
-alert(z[0]);
+var er3 = /[A-G][#b]?/gm;
+
+//var acordes = $('mark').replace(er3, mudaTom('$&', 1));
+
+var acordes = $('mark').match(er3);
+
+var sustenidos = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
+var bemois = ['A', 'Bb', 'B', 'C', 'Db', 'D', 'Eb', 'E', 'F', 'Gb', 'G', 'Ab'];
+
+var notas = ( acordes.join('').indexOf('b') >= 0 ? bemois : sustenidos );
 </script>
 
 <pre>
-acordes.indices[acordes.nomes]
 
-
-
-https://www.google.com.br/search?client=ubuntu&channel=fs&q=javascript+keys+values+method&ie=utf-8&oe=utf-8&redir_esc=&ei=MS1_UOvPL4XL0QGoqYDACA
-http://www.quirksmode.org/js/associative.html
-http://stackoverflow.com/questions/208016/how-to-list-the-properties-of-a-javascript-object
-http://stackoverflow.com/questions/11734417/javascript-equivalent-of-pythons-values-dictionary-method
 </pre>
