--- a/cifra.html
+++ b/cifra.html
@@ -435,19 +435,19 @@ Dm-C-G</pre>
 </div>
 <script>
 var er = /^(.*[:\)])?([ \t\-(]*[A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?(\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?){0,3}(sus\(?[#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?\)?)?(\(?[/\\](([A-G][#b]?[m\-M]?([°º\+]|dim|aum|aug)?)|([#b]?(maj)?[0-9]{1,2}[m\-M]?([°º\+]|dim|aum|aug)?))\)?)?([ \t\-]*[\[\(].*[\)\]])?[ \t\-]*)+$/gm;
-document.getElementById('cifra').innerHTML = document.getElementById('cifra').innerHTML.replace(er, "<mark>$&</mark>");
-//er2 = /(^<span>)\w[ \t–-]+\w/gm;
+$('#cifra').html($('#cifra').html().replace(er, "<mark>$&</mark>");
+
 var er2 = /(((?!^\w)[ \t]*[–-]+[ \t]*(?!^\w))|(<mark.*<\/mark>[\r\n]?))/gm;
-document.getElementById('cifra').innerHTML = document.getElementById('cifra').innerHTML.replace(er2, "<span>$&</span>");
+$('#cifra').html($('#cifra').html().replace(er2, "<span>$&</span>");
 
 
 
 
-var er3 = /[A-G][#b]?/gm;
+var er3 = /[A-G][#b]?(?!([A-LN-Za-ln-z\b]))/gm;
 
 var acordes = [];
 $('mark').each( function(){
-    acordes = acordes.concat(this.textContent.match(er3));
+    acordes = acordes.concat($(this).text().match(er3));
 });
 
 var sustenidos = ['A', 'A#', 'B', 'C', 'C#', 'D', 'D#', 'E', 'F', 'F#', 'G', 'G#'];
