Correçãozinha na mudança de tom pra evitar 'BRIDGE:'.

--- a/cifra.html
+++ b/cifra.html
@@ -443,7 +443,7 @@ $('#cifra').html($('#cifra').html().replace(er2, "<span>$&</span>"));
 
 
 
-var er3 = /[A-G][#b]?(?!([A-LN-Za-ln-z\b]))/gm;
+var er3 = /[A-G][#b]?(?!([A-LN-Za-ln-z:]))/gm;
 
 var acordes = [];
 $('mark').each( function(){
